--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 title:            Jay Coder
 tagline:          'Jay&apos;s Blog'
 description:      'Solve real world problems by leveraging the latest and greatest Microsoft technologies (.NET Core, Azure).'
-url:              http://hyde.getpoole.com
+url:              http://jaycoder.net
 baseurl:          /
 
 author:
