--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      Rouge
 permalink:        pretty
 
 # Setup
-title:            Jay Coder
+title:            Jay Lin
 tagline:          'Jay&apos;s Blog'
 description:      'Solve real world problems by leveraging the latest and greatest Microsoft technologies (.NET Core, Azure).'
 url:              http://jaycoder.net
