--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ permalink:        pretty
 title:            Jay Lin
 tagline:          'Jay&apos;s Blog'
 description:      'Solve real world problems by leveraging the latest and greatest Microsoft technologies (.NET Core, Azure).'
+baseUrl:          /
 url:              http://jaycoder.net
 baseurl:          '/'
 
