--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title:            Jay Lin
 tagline:          'Jay&apos;s Blog'
 description:      'Solve real world problems by leveraging the latest and greatest Microsoft technologies (.NET Core, Azure).'
 baseUrl:          /
+baseurl:          /
 url:              http://jaycoder.net
-baseurl:          '/'
 
 author:
   name:           'Jay Lin'
