--- a/_config.yml
+++ b/_config.yml
@@ -27,4 +27,4 @@ google:
   tag_manager:
     container_id: GTM-5FDRV8L
 
-plugins: [jekyll-paginate, jekyll-gist, jekyll-sitemap]
+plugins: [jekyll-paginate, jekyll-gist, jekyll-sitemap, jekyll-redirect-from]
